<resources>
    <string name="app_name">DoctorPrescribed</string>
    <string name="my_dr_pescribed">My Dr. Prescribed</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="title_activity_doctorlogin">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_patientlogins">Sign in</string>
    <string name="patient_login">Patient Login</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="title_activity_doctor_nav">doctor_nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_patient_nav">patient_nav</string>
    <string name="menu_documents">documents</string>
    <string name="menu_emergency">emergency</string>
    <string name="dr_reg_note">Thr registration process is under admin supervision. Contact admin for further information.</string>
    <string name="password">Password</string>
    <string name="doctor_registration">Doctor Registration</string>
    <string name="department">Department</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="dr_login">Dr. Login</string>
    <string name="don_t_have_an_account_click_here">Don\'t have an account? Click Here</string>
    <string name="login">Login</string>
    <string name="forgt_username_password_click_here">Forgt Username/Password? Click Here</string>
    <string name="prescription">PRESCRIPTION</string>
    <string name="place_for_notes">Place For Notes</string>
</resources>
