<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8E6C1"
    tools:context=".patientlogin">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="372dp"
        android:layout_height="70dp"
        android:background="#EDC1A8"
        android:gravity="center"
        android:text="@string/patient_login"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/amarante"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="301dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#B6ECDE"
        android:ems="10"
        android:hint="@string/aadhar_number"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/patdob"
        android:layout_width="300dp"
        android:layout_height="66dp"
        android:autofillHints=""
        android:background="#B6ECDE"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.016" />

    <Button
        android:id="@+id/patloginbtn"
        android:layout_width="210dp"
        android:layout_height="77dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/patdob"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/patdob"
        app:layout_constraintTop_toBottomOf="@+id/patdob"
        app:layout_constraintVertical_bias="0.051" />

</androidx.constraintlayout.widget.ConstraintLayout>