<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3D69C"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="343dp"
        android:layout_height="51dp"
        android:layout_margin="10dp"
        android:background="#F1AFAF"
        android:gravity="center"
        android:text="@string/my_dr_pescribed"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/architects_daughter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/doctorbtn"
        android:layout_width="219dp"
        android:layout_height="93dp"
        android:background="#C3C9E8"
        android:onClick="doctorclk"
        android:text="@string/doctor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <Button
        android:id="@+id/patientbtn"
        android:layout_width="219dp"
        android:layout_height="83dp"
        android:background="#C3C9E8"
        android:onClick="patientclk"
        android:text="@string/patient"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/doctorbtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/doctorbtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>