<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F2BF"
    tools:context=".doctorlogin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="372dp"
        android:layout_height="70dp"
        android:background="#F4C4AF"
        android:gravity="center"
        android:text="@string/dr_login"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/artifika"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/usernametxt"
        android:layout_width="296dp"
        android:layout_height="69dp"
        android:background="#B5ECE3"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/textView"
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323"
        android:autofillHints="" />
=======
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.038" />
>>>>>>> parent of 9d27d2e... login to patient navigation bar successful
=======
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.038" />
>>>>>>> parent of 9d27d2e... login to patient navigation bar successful
=======
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.038" />
>>>>>>> parent of 9d27d2e... login to patient navigation bar successful

    <EditText
        android:id="@+id/doctorpwdtxt"
        android:layout_width="297dp"
        android:layout_height="67dp"
        android:background="#B5ECE3"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/usernametxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernametxt"
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534"
        android:autofillHints="" />
=======
        app:layout_constraintTop_toBottomOf="@+id/usernametxt"
        app:layout_constraintVertical_bias="0.029" />
>>>>>>> parent of 9d27d2e... login to patient navigation bar successful
=======
        app:layout_constraintTop_toBottomOf="@+id/usernametxt"
        app:layout_constraintVertical_bias="0.029" />
>>>>>>> parent of 9d27d2e... login to patient navigation bar successful
=======
        app:layout_constraintTop_toBottomOf="@+id/usernametxt"
        app:layout_constraintVertical_bias="0.029" />
>>>>>>> parent of 9d27d2e... login to patient navigation bar successful

    <Button
        android:id="@+id/dctloginbtn"
        android:layout_width="176dp"
        android:layout_height="71dp"
        android:onClick="dctloginclk"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/doctorpwdtxt"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/doctorpwdtxt"
        app:layout_constraintTop_toBottomOf="@+id/doctorpwdtxt"
        app:layout_constraintVertical_bias="0.032" />
</androidx.constraintlayout.widget.ConstraintLayout>